# RustBoy

./: README.md  TODO.md  azure-pipelines.yml  opcodes.csv  opcodes.xlsx
.github/workflows/: rust.yml
roms/: Donkey Kong Land III (USA, Europe) (Rev A) (SGB Enhanced).gb
rust_boy/: Cargo.toml
rust_boy/src/: cpu.rs  gpu.rs  main.rs  memory.rs
rust_boy/src/cartridge/: mod.rs
rust_boy/src/cpu/: mod.rs  reg.rs
rust_boy/tests/: test_cpu.rs
